--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -1,1 +1,19 @@
-<p>sidenav works!</p>
+<mat-sidenav-container fullscreen>
+    
+    <mat-sidenav #sidenav (click)="sidenav.close()">
+        <mat-nav-list>
+            <a mat-list-item [routerLink] = "['']">
+                <mat-icon mat-list-icon>home</mat-icon>
+                <span mat-line> Inicio </span>
+            </a>
+        </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+        <app-toolbar [sidenav]="sidenav"></app-toolbar>
+        <div>
+            <router-outlet></router-outlet>
+        </div>
+    </mat-sidenav-content>
+
+</mat-sidenav-container>
