--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,37 @@
-<p>home works!</p>
+<div class="search-container">
+    <mat-form-field appearance="fill" class="search-field">
+        <mat-label>Buscar equipo. . .</mat-label>
+        <input autocomplete="off" matInput #inputSearch  (keyup)="onKeyUp($event)" [matAutocomplete]="auto" />
+        <mat-icon matPrefix color="primary">search</mat-icon>
+        <mat-icon matSuffix color="primary" (click)="onCancel($event)">close</mat-icon>   
+
+        <mat-autocomplete (optionSelected)='onOptionSelected($event)' #auto="matAutocomplete">
+            <mat-option *ngFor="let data of dataStored" [value]="data">
+            {{  data.teamName  }}
+            </mat-option>
+        </mat-autocomplete>
+
+    </mat-form-field>
+</div>
+
+<div class = "cont-card-presentation-team" *ngIf="teamSelected">
+    <mat-card>
+        <mat-card-header style="display: flex; justify-content: center; align-items: center;">
+            <mat-card-title #matCardTitle> {{ teamSelected.teamName }} </mat-card-title>
+            <mat-card-subtitle>{{ teamSelected.country }}</mat-card-subtitle>
+          </mat-card-header>
+
+        <mat-card-content style="display: flex; justify-content: center; align-items: center;">
+            <!-- <span> {{ countryTeam }}</span> -->
+            <img [src]="imgTeamsrc" alt="team">
+            
+
+        </mat-card-content>
+
+        <mat-card-footer>
+              
+        </mat-card-footer>
+    </mat-card>
+
+
+</div>
