--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -23,7 +23,7 @@
 
         <mat-card-content style="display: flex; justify-content: center; align-items: center;">
             <!-- <span> {{ countryTeam }}</span> -->
-            <img [src]="imgTeamsrc" alt="team">
+            <img [src]="imgTeamsrc" alt="team" class="img-logo-team">
             
 
         </mat-card-content>
@@ -32,6 +32,34 @@
               
         </mat-card-footer>
     </mat-card>
-
-
 </div>
+
+<div *ngIf="arrTeamsLeague">
+    <table mat-table [dataSource]="arrTeamsLeague" class="mat-elevation-z8 demo-table" >
+        <ng-container matColumnDef="Nombre">
+          <th mat-header-cell *matHeaderCellDef>Nombre</th>
+          <td mat-cell *matCellDef="let element"> {{element.strTeam}} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="Racha">
+          <th mat-header-cell *matHeaderCellDef>Racha</th>
+          <td mat-cell *matCellDef="let element"> {{element.strForm}} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="Jugados">
+          <th mat-header-cell *matHeaderCellDef>Jugados</th>
+          <td mat-cell *matCellDef="let element"> {{element.intPlayed}} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="Puntos">
+          <th mat-header-cell *matHeaderCellDef>Puntos</th>
+          <td mat-cell *matCellDef="let element"> {{element.intPoints}} </td>
+        </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+</div>
+
+
+
