--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -34,31 +34,71 @@
     </mat-card>
 </div>
 
-<div *ngIf="arrTeamsLeague">
-    <table mat-table [dataSource]="arrTeamsLeague" class="mat-elevation-z8 demo-table" >
+<div *ngIf="arrTeamsLeague.length >= 1" class="cont-table" #tableLeague>
+    <table mat-table [dataSource]="arrTeamsLeague" class="mat-elevation-z8 demo-table">
         <ng-container matColumnDef="Nombre">
           <th mat-header-cell *matHeaderCellDef>Nombre</th>
-          <td mat-cell *matCellDef="let element"> {{element.strTeam}} </td>
+          <td mat-cell *matCellDef="let element" [ngClass]="{'special-row': isSpecialRow(element.strTeam)}"> {{element.strTeam}} </td>
         </ng-container>
       
         <ng-container matColumnDef="Racha">
           <th mat-header-cell *matHeaderCellDef>Racha</th>
-          <td mat-cell *matCellDef="let element"> {{element.strForm}} </td>
+          <td mat-cell *matCellDef="let element" [ngClass]="{'special-row': isSpecialRow(element.strTeam)}"> {{element.strForm}} </td>
         </ng-container>
       
         <ng-container matColumnDef="Jugados">
           <th mat-header-cell *matHeaderCellDef>Jugados</th>
-          <td mat-cell *matCellDef="let element"> {{element.intPlayed}} </td>
+          <td mat-cell *matCellDef="let element" [ngClass]="{'special-row': isSpecialRow(element.strTeam)}"> {{element.intPlayed}} </td>
         </ng-container>
       
         <ng-container matColumnDef="Puntos">
           <th mat-header-cell *matHeaderCellDef>Puntos</th>
-          <td mat-cell *matCellDef="let element"> {{element.intPoints}} </td>
+          <td mat-cell *matCellDef="let element" [ngClass]="{'special-row': isSpecialRow(element.strTeam)}"> {{element.intPoints}} </td>
         </ng-container>
       
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
+</div>
+
+<div *ngIf="arrTeamsLeague.length >= 1" class="cont-last-results" #tableResults>
+
+  <table mat-table [dataSource]="arrLastResults" class="mat-elevation-z8 demo-table">
+    <ng-container matColumnDef="Fecha">
+      <th mat-header-cell *matHeaderCellDef>Fecha</th>
+      <td mat-cell *matCellDef="let element"> {{element.dateEventLocal}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Torneo">
+      <th mat-header-cell *matHeaderCellDef>Torneo</th>
+      <td mat-cell *matCellDef="let element"> {{element.strLeague}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Equipo Local">
+      <th mat-header-cell *matHeaderCellDef>Equipo Local</th>
+      <td mat-cell *matCellDef="let element"> {{element.strHomeTeam}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Resultado">
+      <th mat-header-cell *matHeaderCellDef>Resultado</th>
+      <td mat-cell *matCellDef="let element" [ngClass]="{'result-winner': SetBackgroundColorVictory(element), 'result-drawn' : SetBackgroundColorDraw(element) , 'result-defeat' :SetBackgroundColorDefeat(element)}"> 
+        {{element.intHomeScore}} - {{element.intAwayScore}}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Equipo Visitante">
+      <th mat-header-cell *matHeaderCellDef>Equipo Visitante</th>
+      <td mat-cell *matCellDef="let element"> {{element.strAwayTeam}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Action">
+      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <td mat-cell *matCellDef="let element"> + </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumnsResults"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumnsResults;"></tr>
+  </table>
 </div>
 
 
