--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -74,8 +74,8 @@
       <td mat-cell *matCellDef="let element"> {{element.strLeague}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="Equipo Local">
-      <th mat-header-cell *matHeaderCellDef>Equipo Local</th>
+    <ng-container matColumnDef="Local">
+      <th mat-header-cell *matHeaderCellDef>Local</th>
       <td mat-cell *matCellDef="let element"> {{element.strHomeTeam}} </td>
     </ng-container>
 
@@ -86,14 +86,18 @@
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="Equipo Visitante">
-      <th mat-header-cell *matHeaderCellDef>Equipo Visitante</th>
+    <ng-container matColumnDef="Visitante">
+      <th mat-header-cell *matHeaderCellDef>Visitante</th>
       <td mat-cell *matCellDef="let element"> {{element.strAwayTeam}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="Action">
-      <th mat-header-cell *matHeaderCellDef>Action</th>
-      <td mat-cell *matCellDef="let element"> + </td>
+    <ng-container matColumnDef="Detalles">
+      <th mat-header-cell *matHeaderCellDef>Detalles</th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button (click)="openDialog(element.idEvent)">
+          <mat-icon>visibility</mat-icon>
+        </button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumnsResults"></tr>
